feat(order): introduce domain entities, enums and event-sourcing model